--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bulma": "^0.7.2",
+        "bulma-extensions": "^3.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
